// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin css-no-assignment js : Compilation Error 1`] = `
"There are multiple anonymous css tags that would conflict. Differentiate each tag by assigning the output to a unique identifier
[0m [90m  7 | [39m[32m\`[39m[33m;[39m[0m
[0m [90m  8 | [39m[0m
[0m[31m[1m>[22m[39m[90m  9 | [39mcss[32m\`[39m[0m
[0m [90m    | [39m[31m[1m^[22m[39m[0m
[0m [90m 10 | [39m[32m  .red {[39m[0m
[0m [90m 11 | [39m[32m    color: red;[39m[0m
[0m [90m 12 | [39m[32m  }[39m[0m"
`;

exports[`Plugin display-name DisplayName: DisplayName.css 1`] = `
".display-name {

  color: ultra-red;

}"
`;

exports[`Plugin display-name FooBarBaz: display-name-FooBarBaz.css 1`] = `
".foo-bar-baz {

  color: red;

}"
`;

exports[`Plugin display-name js : Compiled JS 1`] = `
"import styled from 'astroturf';

const Foo = () => {};

const bar = 'Bar';
Foo[bar]['baz'] =
/*#__PURE__*/
styled('div', null, \\"FooBarBaz\\", require(\\"./display-name-FooBarBaz.css\\"), \\"foo-bar-baz\\", \\"fooBarBaz\\");
export default
/*#__PURE__*/
styled(FancyBox, null, \\"DisplayName\\", require(\\"./DisplayName.css\\"), \\"display-name\\", \\"displayName\\");"
`;

exports[`Plugin element-shorthand FancyBox: element-shorthand-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
    width: 96px;
    height: 96px;
  }

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Plugin element-shorthand js : Compiled JS 1`] = `
"import styled from 'astroturf';
const SIZE = 75;
const FancyBox =
/*#__PURE__*/
styled(\\"div\\", null, \\"FancyBox\\", require(\\"./element-shorthand-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");"
`;

exports[`Plugin example js : Compiled JS 1`] = `
"import { css as less } from 'astroturf';
const SIZE = 75;

const styles =
/*#__PURE__*/
require(\\"./example-styles.less\\");"
`;

exports[`Plugin example styles: example-styles.less 1`] = `
"
  .foo {
    color: red;
    width: 75px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
"
`;

exports[`Plugin hoist-import ButtonBase: hoist-import-ButtonBase.css 1`] = `
"@import '~./styles/mixins.scss';
.button-base {

  

  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 1px solid transparent;

}"
`;

exports[`Plugin hoist-import js : Compiled JS 1`] = `
"import { styled } from 'astroturf';
const ButtonBase =
/*#__PURE__*/
styled('button', null, \\"ButtonBase\\", require(\\"./hoist-import-ButtonBase.css\\"), \\"button-base\\", \\"buttonBase\\");"
`;

exports[`Plugin index ButtonBase: index-ButtonBase.css 1`] = `
"@import '~./styles/mixins.scss';
.button-base {

  

  display: inline-flex;
  align-items: center;
  justify-content: center;
  border: 1px solid transparent;

}"
`;

exports[`Plugin index Fixtures: Fixtures.css 1`] = `
".fixtures {

  color: ultra-red;

}"
`;

exports[`Plugin index js : Compiled JS 1`] = `
"import styled from 'astroturf';
const ButtonBase =
/*#__PURE__*/
styled('button', null, \\"ButtonBase\\", require(\\"./index-ButtonBase.css\\"), \\"button-base\\", \\"buttonBase\\");
export default
/*#__PURE__*/
styled(FancyBox, null, \\"Fixtures\\", require(\\"./Fixtures.css\\"), \\"fixtures\\", \\"fixtures\\");"
`;

exports[`Plugin multiple-components FancyBox: multiple-components-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
		width: 96px;
		height: 96px;
	}

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Plugin multiple-components FancyHeader: multiple-components-FancyHeader.css 1`] = `
".fancy-header {

  color: red;
  width: 75px;

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Plugin multiple-components js : Compiled JS 1`] = `
"import styled, { css } from 'astroturf';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', null, \\"FancyBox\\", require(\\"./multiple-components-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");
const FancyHeader =
/*#__PURE__*/
styled('h2', null, \\"FancyHeader\\", require(\\"./multiple-components-FancyHeader.css\\"), \\"fancy-header\\", \\"fancyHeader\\");"
`;

exports[`Plugin no-global js : Compilation Error 1`] = `
"const SIZE = 75;
const styles = less\`
  .foo {
    color: red;
    width: \${SIZE}px;
  }

  .bar {
    composes: foo;

    font-weight: bold;
    font-style: italic;
  }
\`;"
`;

exports[`Plugin pass-options FancierBox: pass-options-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Plugin pass-options FancyBox: pass-options-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
    width: 96px;
    height: 96px;
  }

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Plugin pass-options js : Compiled JS 1`] = `
"import styled from 'astroturf';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', {
  someOption: true
}, \\"FancyBox\\", require(\\"./pass-options-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");
const options = {};
const FancierBox =
/*#__PURE__*/
styled(FancyBox, options, \\"FancierBox\\", require(\\"./pass-options-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");"
`;

exports[`Plugin styled FancierBox: styled-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Plugin styled FancyBox: styled-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;

  @media (min-width: 420px) {
    width: 96px;
    height: 96px;
  }

  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Plugin styled js : Compiled JS 1`] = `
"import styled from 'astroturf';
const SIZE = 75; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', null, \\"FancyBox\\", require(\\"./styled-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");
const FancierBox =
/*#__PURE__*/
styled(FancyBox, null, \\"FancierBox\\", require(\\"./styled-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");"
`;

exports[`Plugin styled-global FancierBox: styled-global-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Plugin styled-global FancyBox: styled-global-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;
  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Plugin styled-global js : Compiled JS 1`] = `
"// prettier-ignore
const FancyBox =
/*#__PURE__*/
styled('div', null, \\"FancyBox\\", require(\\"./styled-global-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");
const FancierBox =
/*#__PURE__*/
styled(FancyBox, null, \\"FancierBox\\", require(\\"./styled-global-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");"
`;

exports[`Plugin styled-no-assignment js : Compilation Error 1`] = `
"The output of this styled component is never used. Either assign it to a variable or export it.
[0m[31m[1m>[22m[39m[90m 1 | [39mstyled([32m'p'[39m)[32m\`[39m[0m
[0m [90m   | [39m[31m[1m^[22m[39m[0m
[0m [90m 2 | [39m[32m  color: blue;[39m[0m
[0m [90m 3 | [39m[32m\`[39m[33m;[39m[0m
[0m [90m 4 | [39m[0m"
`;

exports[`Plugin styled-tag FancierBox: styled-tag-FancierBox.css 1`] = `
".fancier-box {

  color: ultra-red;

}"
`;

exports[`Plugin styled-tag FancyBox: styled-tag-FancyBox.css 1`] = `
".fancy-box {

  color: red;
  width: 75px;
  &.primary {
    background: white;
    color: palevioletred;
  }

}"
`;

exports[`Plugin styled-tag js : Compiled JS 1`] = `
"import s from 'astroturf'; // prettier-ignore

const FancyBox =
/*#__PURE__*/
styled('div', null, \\"FancyBox\\", require(\\"./styled-tag-FancyBox.css\\"), \\"fancy-box\\", \\"fancyBox\\");
const FancierBox =
/*#__PURE__*/
styled(FancyBox, null, \\"FancierBox\\", require(\\"./styled-tag-FancierBox.css\\"), \\"fancier-box\\", \\"fancierBox\\");"
`;

exports[`Plugin with-props RedPasswordInput: with-props-RedPasswordInput.css 1`] = `
".red-password-input {

  background-color: red;

}"
`;

exports[`Plugin with-props js : Compiled JS 1`] = `
"import { styled } from 'astroturf';
import withProps from 'recompose/withProps';
const RedPasswordInput = withProps({
  type: 'password'
})(
/*#__PURE__*/
styled('input', null, \\"RedPasswordInput\\", require(\\"./with-props-RedPasswordInput.css\\"), \\"red-password-input\\", \\"redPasswordInput\\"));"
`;
